--- a/task-two/src/app/card/card.component.html
+++ b/task-two/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col border p5">
     <div class="flex flex-row align-center">
-        <a class="title">{{item.title}}</a>
-        <span class="tag" *ngfor="let category of item.category | keyvalue">{{category.value}}</span>
+        <a class="title" href="{{item.url}}">{{item.title}}</a>
+        <span class="tag" *ngFor="let category of item.category | keyvalue">{{category.value}}</span>
     </div>
     <p>
         {{item.description}}
