--- a/task-two/src/app/card/card.component.html
+++ b/task-two/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col border p5">
     <div class="flex flex-row align-center">
         <a class="title" href="{{item.url}}">{{item.title}}</a>
-        <span class="tag" *ngFor="let category of item.category | keyvalue">{{category.value}}</span>
+        <span class="tag">{{item.category[0]}} - {{item.category[1]}}</span>
     </div>
     <p>
         {{item.description}}
